syntax = "proto3";

package proto;
option go_package = "github.com/rebirthmonkey/go/80_standards/10_log/80_server/apiserver/user/controller/grpc/v1";


//go:generate protoc -I. --go_out=plugins=grpc:.


// Student implements a cache rpc service.
service Student{
	rpc ListStudents(ListStudentsRequest) returns (ListStudentsResponse) {}
}

// ListStudentsRequest defines ListStudents request struct.
message ListStudentsRequest {
    optional int64 offset = 1;
    optional int64 limit = 2;
}

// StudentInfo contains student details.
message StudentInfo {
    int64 status = 1;
    string Nickname = 2;
    string Password  = 3;
    string Email   = 4;
    string Phone = 5;
    int64 IsAdmin = 6;
    string TotalPolicy = 7;
    string LoginedAt = 8;
}

// ListStudentsResponse defines ListStudents response struct.
message ListStudentsResponse {
    int64 total_count = 1;
    repeated  StudentInfo items = 2;
}
